examples/test/testpolicy19092.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19092
  namespace: namespace199
spec:
  podSelector:
    matchLabels:
      key12: value42
      key48: value13
      key21: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value13
          key36: value25
      podSelector:
        matchLabels:
          key4: value29
          key47: value14
          key20: value21
